fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html, body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #1f1f1f;
+  overflow: hidden;
 }
 
 code {
